--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "login.js",
   "scripts": {
     "start": "nodemon --exec node js/server.js",
-    "build": "node js/server.js"
+    "build": "node js/server.js",
+    "smoke-test": "mocha js/smoke-test.js"
   },
   "repository": {
     "type": "git",
@@ -27,5 +28,8 @@
     "webpack": "^5.78.0",
     "webpack-cli": "^5.0.2",
     "webpack-dev-middleware": "^6.0.2"
+  },
+  "devDependencies": {
+    "mocha": "^10.2.0"
   }
 }
