--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,7 +26,7 @@ jobs:
       - name: Build project
         run: npm run build 
       - name: Start server
-        run: npm run start & wait
+        run: npm run start &
       - name: Run smoke tests
         run: npm run smoke-test
       - name: Stop server
