--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,5 +30,5 @@ jobs:
       - name: Run smoke tests
         run: npm run smoke-test
       - name: Stop server
-        run: taskkill /F /IM node.exe
+        run: pkill node
 
