--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/checkout@v2
       
     - name: Build Docker image
-      run: docker build -t proyecto:05 .
+      run: docker build -t gestion_configuracion:05 .
       
     - name: Login to DockerHub
       uses: docker/login-action@v1
