--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/checkout@v2
       
     - name: Build Docker image
-      run: docker build -t gestion_configuracion:05 .
+      run: docker build -t sebas807/gestion_configuracion:05 .
       
     - name: Login to DockerHub
       uses: docker/login-action@v1
@@ -26,4 +26,4 @@ jobs:
         password: ${{ env.DOCKER_PASSWORD }}
       
     - name: Push Docker image to DockerHub
-      run: docker push gestion_configuracion:05
+      run: docker push sebas807/gestion_configuracion:05
