--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
   },
   "homepage": "https://github.com/Sebas807/Gestion-Configuracion#readme",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "css-loader": "^6.7.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "firebase": "^9.19.1",
+    "firebase-auth": "^0.1.2",
+    "firebase-firestore-lite": "^1.0.3",
     "html-webpack-plugin": "^5.5.0",
     "nodemon": "^2.0.22",
     "style-loader": "^3.3.2",
