--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -27,3 +27,42 @@ jobs:
       
     - name: Push Docker image to DockerHub
       run: docker push sebas807/gestion_configuracion:opcx
+  lint:
+  name: Lint
+  runs-on: ubuntu-latest
+  steps:
+    - name: Check out code
+      uses: actions/checkout@v2
+
+
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v1
+      with:
+        terraform_version: 1.X.X
+
+
+    - name: Run terraform fmt check
+      run: terraform fmt -check -diff -recursive
+
+
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-region: us-east-1
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+
+    - name: Initialize Terraform
+      run: |
+        cd terraform/
+        terraform init -input=false         
+
+
+    - name: Plan Terraform
+      id: plan
+      continue-on-error: true
+      run: |
+        cd terraform/
+        terraform plan -input=false -no-color 
+
